--- a/thanks.html
+++ b/thanks.html
@@ -15,6 +15,7 @@
                 can render to provide information to
                 the user that we've received their submission.
              -->
+             <h1>Thanks for Your Submission!!!! uwu</h1>
         </main>
     </body>
 </html>
